# lap

./: README.md
.github/workflows/: pr-build.yml  release-homebrew.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/guide/: getting-started.md  introduction.md
docs/guide/release-notes/: v0.2.3.md
i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh-CN.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: libraw_shim.cpp  t_ai.rs  t_cmds.rs  t_config.rs  t_face.rs  t_image.rs  t_libraw.rs  t_sqlite.rs  t_utils.rs
src-vite/: package.json
src-vite/src/: App.vue  main.js
src-vite/src/common/: api.js  fileMenu.ts  icons.js  shortcuts.ts  utils.ts
src-vite/src/components/: AlbumFolder.vue  AlbumList.vue  BackupDialog.vue  Content.vue  DedupPane.vue  FileInfo.vue  GridView.vue  Image.vue  ImageHistogram.vue  ImageSearch.vue  ManageLibraries.vue  MediaViewer.vue  RestoreDialog.vue  SelectionPanel.vue  SettingsAbout.vue  Thumbnail.vue  Video.vue  Welcome.vue
src-vite/src/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json  zh.json
src-vite/src/stores/: configStore.js
src-vite/src/views/: Home.vue  ImageEditor.vue  ImageViewer.vue  Settings.vue
